Remove functions.scss

--- a/sass/utilities/_all.sass
+++ b/sass/utilities/_all.sass
@@ -1,7 +1,7 @@
 @charset "utf-8"
 
 @import "initial-variables.sass"
-@import "functions.scss"
+@import "functions.sass"
 @import "derived-variables.sass"
 @import "animations.sass"
 @import "mixins.sass"
