Disable resize in textarea with state disabled :+1:

--- a/sass/form/shared.sass
+++ b/sass/form/shared.sass
@@ -48,6 +48,7 @@ $input-radius: $radius !default
     border-color: $input-disabled-border-color
     box-shadow: none
     color: $input-disabled-color
+    resize: none
     +placeholder
       color: $input-disabled-placeholder-color
 
