Update css bulma with disable resize in text-area disabled

--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -4203,6 +4203,7 @@ fieldset[disabled] .select select,
   border-color: whitesmoke;
   box-shadow: none;
   color: #7a7a7a;
+  resize: none;
 }
 
 .input[disabled]::-moz-placeholder, .textarea[disabled]::-moz-placeholder, .select select[disabled]::-moz-placeholder,
