--- a/css/bulma.css
+++ b/css/bulma.css
@@ -4192,6 +4192,7 @@ fieldset[disabled] .select select,
   border-color: whitesmoke;
   box-shadow: none;
   color: #7a7a7a;
+  resize: none;
 }
 
 .input[disabled]::-moz-placeholder, .textarea[disabled]::-moz-placeholder, .select select[disabled]::-moz-placeholder,
