Add GitHub sponsor button

--- a/docs/_sass/footer.sass
+++ b/docs/_sass/footer.sass
@@ -60,7 +60,7 @@
 
 +tablet
   .bd-footer-donation
-    width: 240px
+    padding: 0.75rem 1.5rem
 
 .bd-footer-donation-title
   color: $grey-light
@@ -71,6 +71,11 @@
 .bd-footer-donation-action
   @extend %center
   height: 70px
+  .bd-github-button
+    margin-right: 0.5rem
+  .bd-github-button,
+  .bd-patreon-button
+    flex-shrink: 0
   .paypal-form
     height: 30px
     img
