--- a/docs/_sass/global.sass
+++ b/docs/_sass/global.sass
@@ -37,6 +37,30 @@ svg
     p:first-child
       margin-right: 1em
 
+.bd-github-button
+  background-color: #eff3f6
+  background-image: linear-gradient(-180deg,#fafbfc,#eff3f6 90%)
+  border-color: #1b1f2333
+  color: #24292e
+  font-size: 0.875rem
+  height: auto
+  padding: calc(0.5em - 1px) 1em
+  position: relative
+  strong
+    font-weight: $weight-semibold
+    margin-top: -2px
+  .icon
+    color: #ea4aaa
+  .tag
+    font-size: 0.5rem
+    font-style: normal
+    margin: -1px -8px 0 7px
+  &:hover
+    background-color: #e6ebf1
+    background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%)
+    background-position: -.5em
+    border-color: #1b1f2359
+
 .bd-patreon-button
   display: inline-block
   position: relative
@@ -135,3 +159,13 @@ $carbon-poweredby-height: 20px
     right: 0
     &:hover
       text-decoration: underline
+
++until($widescreen)
+  #navMenuLove .bd-navbar-item-backers
+    display: none
+
++widescreen
+  #moreDropdown
+    .navbar-item:first-child,
+    .navbar-divider:nth-child(2)
+      display: none
