--- a/docs/_sass/main.sass
+++ b/docs/_sass/main.sass
@@ -165,19 +165,21 @@
     transition-duration: $speed
     transition-property: transform
 
+.tag.bd-mini-tag
+  border-radius: 2px !important
+  font-family: Verdana, sans-serif
+  font-size: 0.5rem
+  font-weight: bold
+  height: 2.25em
+  vertical-align: text-bottom
+
 .bd-category-name
   color: $text-strong
   position: relative
   &.is-active
     color: $link
-  .tag
-    border-radius: 2px
-    font-family: Verdana
-    font-size: 0.5rem
-    font-weight: bold
-    height: 2.25em
+  .bd-mini-tag
     margin-left: 0.5em
-    vertical-align: text-bottom
 
 .bd-category-list
   @extend %bd-list
