--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -1567,14 +1567,14 @@ a.has-text-danger:hover, a.has-text-danger:focus {
 .box {
   background-color: white;
   border-radius: 6px;
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
   color: #4a4a4a;
   display: block;
   padding: 1.25rem;
 }
 
 a.box:hover, a.box:focus {
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px #3273dc;
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0 0 1px #3273dc;
 }
 
 a.box:active {
@@ -2872,14 +2872,16 @@ fieldset[disabled] .button {
   width: auto;
 }
 
+.container.is-fluid {
+  max-width: none;
+  padding-left: 32px;
+  padding-right: 32px;
+  width: 100%;
+}
+
 @media screen and (min-width: 1024px) {
   .container {
     max-width: 960px;
-  }
-  .container.is-fluid {
-    margin-left: 32px;
-    margin-right: 32px;
-    max-width: none;
   }
 }
 
@@ -3371,7 +3373,7 @@ fieldset[disabled] .button {
 }
 
 .progress::-webkit-progress-bar {
-  background-color: #dbdbdb;
+  background-color: #ededed;
 }
 
 .progress::-webkit-progress-value {
@@ -3400,7 +3402,7 @@ fieldset[disabled] .button {
 }
 
 .progress.is-white:indeterminate {
-  background-image: linear-gradient(to right, white 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, white 30%, #ededed 30%);
 }
 
 .progress.is-black::-webkit-progress-value {
@@ -3416,7 +3418,7 @@ fieldset[disabled] .button {
 }
 
 .progress.is-black:indeterminate {
-  background-image: linear-gradient(to right, #0a0a0a 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #0a0a0a 30%, #ededed 30%);
 }
 
 .progress.is-light::-webkit-progress-value {
@@ -3432,7 +3434,7 @@ fieldset[disabled] .button {
 }
 
 .progress.is-light:indeterminate {
-  background-image: linear-gradient(to right, whitesmoke 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, whitesmoke 30%, #ededed 30%);
 }
 
 .progress.is-dark::-webkit-progress-value {
@@ -3448,7 +3450,7 @@ fieldset[disabled] .button {
 }
 
 .progress.is-dark:indeterminate {
-  background-image: linear-gradient(to right, #363636 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #363636 30%, #ededed 30%);
 }
 
 .progress.is-primary::-webkit-progress-value {
@@ -3464,7 +3466,7 @@ fieldset[disabled] .button {
 }
 
 .progress.is-primary:indeterminate {
-  background-image: linear-gradient(to right, #00d1b2 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #00d1b2 30%, #ededed 30%);
 }
 
 .progress.is-link::-webkit-progress-value {
@@ -3480,7 +3482,7 @@ fieldset[disabled] .button {
 }
 
 .progress.is-link:indeterminate {
-  background-image: linear-gradient(to right, #3273dc 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #3273dc 30%, #ededed 30%);
 }
 
 .progress.is-info::-webkit-progress-value {
@@ -3496,7 +3498,7 @@ fieldset[disabled] .button {
 }
 
 .progress.is-info:indeterminate {
-  background-image: linear-gradient(to right, #209cee 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #209cee 30%, #ededed 30%);
 }
 
 .progress.is-success::-webkit-progress-value {
@@ -3512,7 +3514,7 @@ fieldset[disabled] .button {
 }
 
 .progress.is-success:indeterminate {
-  background-image: linear-gradient(to right, #23d160 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #23d160 30%, #ededed 30%);
 }
 
 .progress.is-warning::-webkit-progress-value {
@@ -3528,7 +3530,7 @@ fieldset[disabled] .button {
 }
 
 .progress.is-warning:indeterminate {
-  background-image: linear-gradient(to right, #ffdd57 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #ffdd57 30%, #ededed 30%);
 }
 
 .progress.is-danger::-webkit-progress-value {
@@ -3544,7 +3546,7 @@ fieldset[disabled] .button {
 }
 
 .progress.is-danger:indeterminate {
-  background-image: linear-gradient(to right, #ff3860 30%, #dbdbdb 30%);
+  background-image: linear-gradient(to right, #ff3860 30%, #ededed 30%);
 }
 
 .progress:indeterminate {
@@ -3556,8 +3558,8 @@ fieldset[disabled] .button {
           animation-name: moveIndeterminate;
   -webkit-animation-timing-function: linear;
           animation-timing-function: linear;
-  background-color: #dbdbdb;
-  background-image: linear-gradient(to right, #4a4a4a 30%, #dbdbdb 30%);
+  background-color: #ededed;
+  background-image: linear-gradient(to right, #4a4a4a 30%, #ededed 30%);
   background-position: top left;
   background-repeat: no-repeat;
   background-size: 150% 150%;
@@ -4238,7 +4240,7 @@ fieldset[disabled] .select select:-ms-input-placeholder,
 }
 
 .input, .textarea {
-  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.1);
+  box-shadow: inset 0 1px 2px rgba(10, 10, 10, 0.05);
   max-width: 100%;
   width: 100%;
 }
@@ -5538,7 +5540,7 @@ fieldset[disabled] .select select:hover {
 
 .card {
   background-color: white;
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
   color: #4a4a4a;
   max-width: 100%;
   position: relative;
@@ -5547,7 +5549,7 @@ fieldset[disabled] .select select:hover {
 .card-header {
   background-color: transparent;
   align-items: stretch;
-  box-shadow: 0 1px 2px rgba(10, 10, 10, 0.1);
+  box-shadow: 0 0.125em 0.25em rgba(10, 10, 10, 0.1);
   display: flex;
 }
 
@@ -5557,7 +5559,7 @@ fieldset[disabled] .select select:hover {
   display: flex;
   flex-grow: 1;
   font-weight: 700;
-  padding: 0.75rem;
+  padding: 0.75rem 1rem;
 }
 
 .card-header-title.is-centered {
@@ -5569,7 +5571,7 @@ fieldset[disabled] .select select:hover {
   cursor: pointer;
   display: flex;
   justify-content: center;
-  padding: 0.75rem;
+  padding: 0.75rem 1rem;
 }
 
 .card-image {
@@ -5584,7 +5586,7 @@ fieldset[disabled] .select select:hover {
 
 .card-footer {
   background-color: transparent;
-  border-top: 1px solid #dbdbdb;
+  border-top: 1px solid #ededed;
   align-items: stretch;
   display: flex;
 }
@@ -5600,7 +5602,7 @@ fieldset[disabled] .select select:hover {
 }
 
 .card-footer-item:not(:last-child) {
-  border-right: 1px solid #dbdbdb;
+  border-right: 1px solid #ededed;
 }
 
 .card .media:not(:last-child) {
@@ -5642,7 +5644,7 @@ fieldset[disabled] .select select:hover {
 .dropdown-content {
   background-color: white;
   border-radius: 4px;
-  box-shadow: 0 2px 3px rgba(10, 10, 10, 0.1), 0 0 0 1px rgba(10, 10, 10, 0.1);
+  box-shadow: 0 0.5em 1em -0.125em rgba(10, 10, 10, 0.1), 0 0px 0 1px rgba(10, 10, 10, 0.02);
   padding-bottom: 0.5rem;
   padding-top: 0.5rem;
 }
@@ -10838,6 +10840,15 @@ label.panel-block:hover {
   transition-property: transform, -webkit-transform;
 }
 
+.tag.bd-mini-tag {
+  border-radius: 2px !important;
+  font-family: Verdana, sans-serif;
+  font-size: 0.5rem;
+  font-weight: bold;
+  height: 2.25em;
+  vertical-align: text-bottom;
+}
+
 .bd-category-name {
   color: #363636;
   position: relative;
@@ -10847,14 +10858,8 @@ label.panel-block:hover {
   color: #3273dc;
 }
 
-.bd-category-name .tag {
-  border-radius: 2px;
-  font-family: Verdana;
-  font-size: 0.5rem;
-  font-weight: bold;
-  height: 2.25em;
+.bd-category-name .bd-mini-tag {
   margin-left: 0.5em;
-  vertical-align: text-bottom;
 }
 
 .bd-category-list {
@@ -11304,6 +11309,39 @@ svg {
   }
 }
 
+.bd-github-button {
+  background-color: #eff3f6;
+  background-image: linear-gradient(-180deg, #fafbfc, #eff3f6 90%);
+  border-color: #1b1f2333;
+  color: #24292e;
+  font-size: 0.875rem;
+  height: auto;
+  padding: calc(0.5em - 1px) 1em;
+  position: relative;
+}
+
+.bd-github-button strong {
+  font-weight: 600;
+  margin-top: -2px;
+}
+
+.bd-github-button .icon {
+  color: #ea4aaa;
+}
+
+.bd-github-button .tag {
+  font-size: 0.5rem;
+  font-style: normal;
+  margin: -1px -8px 0 7px;
+}
+
+.bd-github-button:hover {
+  background-color: #e6ebf1;
+  background-image: linear-gradient(-180deg, #f0f3f6, #e6ebf1 90%);
+  background-position: -.5em;
+  border-color: #1b1f2359;
+}
+
 .bd-patreon-button {
   display: inline-block;
   position: relative;
@@ -11432,6 +11470,19 @@ svg {
 
 #carbonads .carbon-poweredby:hover {
   text-decoration: underline;
+}
+
+@media screen and (max-width: 1215px) {
+  #navMenuLove .bd-navbar-item-backers {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1216px) {
+  #moreDropdown .navbar-item:first-child,
+  #moreDropdown .navbar-divider:nth-child(2) {
+    display: none;
+  }
 }
 
 .bd-index-header {
@@ -12233,7 +12284,7 @@ svg {
 
 @media screen and (min-width: 769px), print {
   .bd-footer-donation {
-    width: 240px;
+    padding: 0.75rem 1.5rem;
   }
 }
 
@@ -12248,6 +12299,15 @@ svg {
 
 .bd-footer-donation-action {
   height: 70px;
+}
+
+.bd-footer-donation-action .bd-github-button {
+  margin-right: 0.5rem;
+}
+
+.bd-footer-donation-action .bd-github-button,
+.bd-footer-donation-action .bd-patreon-button {
+  flex-shrink: 0;
 }
 
 .bd-footer-donation-action .paypal-form {
