--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -34,7 +34,7 @@ meta:
     </li>
   </ul>
   <p>
-    For the <a href="#full-height-hero">full height hero</a> to work, you will also need a <code>hero-head</code> and a <code>hero-foot</code>.
+    For the <a href="#fullheight-hero-in-3-parts">full height hero</a> to work, you will also need a <code>hero-head</code> and a <code>hero-foot</code>.
   </p>
 </div>
 
