Add GitHub sponsor button

--- a/docs/_sass/global.sass
+++ b/docs/_sass/global.sass
@@ -160,8 +160,12 @@ $carbon-poweredby-height: 20px
     &:hover
       text-decoration: underline
 
++until($fullhd)
+  .bd-navbar-icon
+    display: none
+
 +until($widescreen)
-  #navMenuLove .bd-navbar-item-backers
+  .bd-navbar .bd-navbar-item-backers
     display: none
 
 +widescreen
