--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -11472,8 +11472,14 @@ svg {
   text-decoration: underline;
 }
 
+@media screen and (max-width: 1407px) {
+  .bd-navbar-icon {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 1215px) {
-  #navMenuLove .bd-navbar-item-backers {
+  .bd-navbar .bd-navbar-item-backers {
     display: none;
   }
 }
