--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -1,4 +1,4 @@
-<nav id="navbar" class="navbar has-shadow is-spaced">
+<nav id="navbar" class="bd-navbar navbar has-shadow is-spaced">
   <div class="container">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.url }}">
@@ -77,13 +77,13 @@
     </div>
 
     <div class="navbar-end">
-      <a class="navbar-item is-hidden-touch is-hidden-desktop-only" href="{{ site.data.meta.github }}" target="_blank">
+      <a class="bd-navbar-icon navbar-item" href="{{ site.data.meta.github }}" target="_blank">
         <span class="icon" style="color: #333;">
           <i class="fab fa-lg fa-github-alt"></i>
         </span>
       </a>
 
-      <a class="navbar-item is-hidden-touch is-hidden-desktop-only" href="{{ site.data.meta.twitter }}" target="_blank">
+      <a class="bd-navbar-icon navbar-item" href="{{ site.data.meta.twitter }}" target="_blank">
         <span class="icon" style="color: #55acee;">
           <i class="fab fa-lg fa-twitter"></i>
         </span>
