Update panel, Fix icon buttons

--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -98,7 +98,7 @@
             {% include elements/patreon.html %}
           </p>
           <p class="control">
-            <a class="button is-primary" href="{{ site.data.meta.download }}">
+            <a class="button is-primary" style="height: 2.25em; padding: calc(.375em - 1px) .75em;" href="{{ site.data.meta.download }}">
               <strong>Download</strong>
             </a>
           </p>
