--- a/sass/components/dropdown.sass
+++ b/sass/components/dropdown.sass
@@ -15,7 +15,7 @@ $dropdown-item-hover-background-color: $background !default
 $dropdown-item-active-color: $link-invert !default
 $dropdown-item-active-background-color: $link !default
 
-$dropdown-divider-background-color: $border !default
+$dropdown-divider-background-color: $border-light !default
 
 .dropdown
   display: inline-flex
