--- a/sass/form/shared.sass
+++ b/sass/form/shared.sass
@@ -1,14 +1,14 @@
-$input-color: $grey-darker !default
-$input-background-color: $white !default
-$input-border-color: $grey-lighter !default
+$input-color: $text-strong !default
+$input-background-color: $scheme-main !default
+$input-border-color: $border !default
 $input-height: $control-height !default
-$input-shadow: inset 0 0.0625em 0.125em rgba($black, 0.05) !default
+$input-shadow: inset 0 0.0625em 0.125em rgba($scheme-invert, 0.05) !default
 $input-placeholder-color: rgba($input-color, 0.3) !default
 
-$input-hover-color: $grey-darker !default
-$input-hover-border-color: $grey-light !default
+$input-hover-color: $text-strong !default
+$input-hover-border-color: $border-hover !default
 
-$input-focus-color: $grey-darker !default
+$input-focus-color: $text-strong !default
 $input-focus-border-color: $link !default
 $input-focus-box-shadow-size: 0 0 0 0.125em !default
 $input-focus-box-shadow-color: rgba($link, 0.25) !default
@@ -20,8 +20,8 @@ $input-disabled-placeholder-color: rgba($input-disabled-color, 0.3) !default
 
 $input-arrow: $link !default
 
-$input-icon-color: $grey-lighter !default
-$input-icon-active-color: $grey !default
+$input-icon-color: $border !default
+$input-icon-active-color: $text !default
 
 $input-radius: $radius !default
 
