Only use derived variables

--- a/docs/_includes/elements/github.html
+++ b/docs/_includes/elements/github.html
@@ -1,4 +1,4 @@
-<a class="button bd-github-button" href="https://github.com/users/jgthms/sponsorship" target="_blank">
+<a class="button bd-github-button" href="{{ site.data.meta.sponsorship_url }}" target="_blank">
   <span class="icon">
     <i class="fas fa-heart"></i>
   </span>
