--- a/docs/_sass/sponsors.sass
+++ b/docs/_sass/sponsors.sass
@@ -35,7 +35,7 @@
     min-height: 0
 
 .bd-partnrs
-  background-color: $white-bis
+  background-color: $scheme-main-bis
   #carbonads
     .carbon-text
       padding-bottom: 0
@@ -43,7 +43,7 @@
       display: none
 
 .bd-partner-title
-  color: $grey-light
+  color: $border-hover
   font-size: 0.875rem
   margin-bottom: 1rem
 
@@ -57,11 +57,11 @@
 
 .bd-minis-link
   @extend %center
-  color: $grey
+  color: $text-light
   .icon
     margin-right: 0.25em
   strong
-    color: $grey
+    color: $text-light
     margin-left: 0.25em
 
 .bd-minis-list
