--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -13554,7 +13554,7 @@ svg {
 
 .bd-tw-author {
   align-items: center;
-  color: #1c2022;
+  color: #363636;
   display: flex;
   line-height: 1.2;
 }
@@ -13591,7 +13591,7 @@ svg {
 }
 
 .bd-tw-content {
-  color: #1c2022;
+  color: #363636;
   font-size: 16px;
   line-height: 1.4;
   margin-top: 14px;
@@ -13753,7 +13753,7 @@ svg {
 }
 
 .twitter-tweet:not(.twitter-tweet-rendered) p {
-  color: #1c2022;
+  color: #363636;
   font-size: 16px;
   margin-bottom: 3.2px;
 }
