--- a/docs/_sass/global.sass
+++ b/docs/_sass/global.sass
@@ -16,10 +16,10 @@ svg
   strong
     color: currentColor
   a
-    border-bottom: 1px solid rgba($white, 0.5)
+    border-bottom: 1px solid rgba($scheme-main, 0.5)
     padding-bottom: 2px
     &:hover
-      border-bottom-color: $white
+      border-bottom-color: $scheme-main
   span
     margin: 0 0.25em
     opacity: 0.5
@@ -99,8 +99,8 @@ $carbon-poweredby-height: 20px
   padding: 0
   position: relative
   &:hover
-    background-color: $white
-    box-shadow: 0 0 0 $carbon-shadow-size $white
+    background-color: $scheme-main
+    box-shadow: 0 0 0 $carbon-shadow-size $scheme-main
   +tablet
     width: $carbon-width
 
@@ -151,7 +151,7 @@ $carbon-poweredby-height: 20px
       color: $link
   .carbon-poweredby
     bottom: 0
-    color: $grey-light
+    color: $border-hover
     display: inline
     font-size: $size-small
     line-height: $carbon-poweredby-height
