--- a/docs/_sass/index.sass
+++ b/docs/_sass/index.sass
@@ -18,7 +18,7 @@
     strong
       color: $primary
   .subtitle
-    color: $grey-light !important
+    color: $border-hover !important
     strong
       color: currentColor
   &:not(:last-child)
@@ -41,7 +41,7 @@
     margin-right: auto
 
 .bd-index-custom-title
-  color: $grey-light
+  color: $border-hover
 
 .bd-index-custom-example
   padding: 1rem
@@ -77,28 +77,28 @@
   .button
     &.is-primary
       background-color: $mauve
-      color: $white
+      color: $scheme-main
       &:hover
         background-color: darken($mauve, 2.5%)
       &:active
         background-color: darken($mauve, 5%)
     &.is-link
       background-color: $pink
-      color: $white
+      color: $scheme-main
       &:hover
         background-color: darken($pink, 2.5%)
       &:active
         background-color: darken($pink, 5%)
   +selection
     background-color: $pink
-    color: $white
+    color: $scheme-main
 
 // Fullscreen
 
 .bd-index-fullscreen
   .tabs
     a
-      color: $grey-light !important
+      color: $border-hover !important
 
 // Columns
 
@@ -161,13 +161,13 @@
     transition-duration: $speed * 2
     transition-property: color
   .subtitle
-    color: $grey-light
+    color: $border-hover
     position: relative
     strong
       color: currentColor
   &::before
     +overlay
-    background-color: $white-bis
+    background-color: $scheme-main-bis
     border-radius: $radius-large
     content: ""
     display: block
@@ -194,7 +194,7 @@
       color: $link
   &:nth-child(4):hover
     .title
-      color: $black
+      color: $scheme-invert
 
 .bd-focus-icon
   position: relative
@@ -292,7 +292,7 @@
       color: $black-ter
     &.is-success,
     &.is-error
-      color: $white
+      color: $scheme-main
       pointer-events: none
       text-decoration: none
     &.is-success
@@ -301,10 +301,10 @@
       background-color: $red
   \::-moz-selection
     background: $yellow
-    color: $black-ter
+    color: $scheme-invert-ter
   \::selection
     background: $yellow
-    color: $black-ter
+    color: $scheme-invert-ter
 
 .intro-buttons
   margin-top: 1.5rem
@@ -313,7 +313,7 @@
     padding-right: 1.375em
 
 .intro-video
-  background-color: $white
+  background-color: $scheme-main
   margin-left: auto
   margin-right: auto
   max-width: 640px
