--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -56,7 +56,7 @@
   strong
     font-weight: $weight-semibold
   &:hover
-    background-color: $white-bis
+    background-color: $scheme-main-bis
 
 .bd-link-surtitle
   float: right
@@ -280,9 +280,9 @@ $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
     color: currentColor
   code,
   pre
-    background-color: rgba($black, 0.2)
+    background-color: rgba($scheme-invert, 0.2)
     border-radius: $radius
-    color: $white
+    color: $scheme-main
   pre code
     background-color: transparent
   // Colors
