--- a/sass/components/pagination.sass
+++ b/sass/components/pagination.sass
@@ -30,6 +30,7 @@ $pagination-ellipsis-color: $grey-light !default
 $pagination-shadow-inset: inset 0 1px 2px rgba($scheme-invert, 0.2)
 
 .pagination
+  @extend %block
   font-size: $size-normal
   margin: $pagination-margin
   // Sizes
