--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -207,7 +207,7 @@ $button-static-border-color: $border !default
           box-shadow: none
           color: $color-invert
       // If light and dark colors are provided
-      @if length($pair) > 3
+      @if length($pair) >= 4
         $color-light: nth($pair, 3)
         $color-dark: nth($pair, 4)
         &.is-light
