Fix per @jgthms
- Could be a small breaking change
   since `overflow: hidden` is added to card

--- a/sass/components/card.sass
+++ b/sass/components/card.sass
@@ -25,12 +25,7 @@ $card-media-margin: $block-spacing !default
   max-width: 100%
   position: relative
   border-radius: $card-radius
-  & > :first-child
-    border-top-right-radius: $card-radius
-    border-top-left-radius: $card-radius
-  & > :last-child
-    border-bottom-right-radius: $card-radius
-    border-bottom-left-radius: $card-radius
+  overflow: hidden
 
 .card-header
   background-color: $card-header-background-color
