Write 0.8 blog post

--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -2,6 +2,18 @@
   background-color: $primary
   color: $primary-invert
 
+.bd-post-container
+  margin: 0 auto
+  max-width: 56rem
+
+.bd-post-fullwidth
+  text-align: center
+
++from(60rem)
+  .bd-post-fullwidth
+    margin-left: calc(28rem - 50vw)
+    margin-right: calc(28rem - 50vw)
+
 .bd-post
   .table
     font-size: 1rem
