fix: documentation button hidden on tablets
- add jekyll cache folder to .gitignore

--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -33,7 +33,7 @@
         <span class="is-hidden-touch is-hidden-widescreen">
           Docs
         </span>
-        <span class="is-hidden-tablet-only is-hidden-desktop-only">
+        <span class="is-hidden-desktop-only">
           Documentation
         </span>
       </a>
