Use CSS vars for docs

--- a/docs/_includes/global/navbar.html
+++ b/docs/_includes/global/navbar.html
@@ -2,7 +2,8 @@
   <div class="container">
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.url }}">
-      <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.data.meta.title }}" width="112" height="28">
+      <img class="bd-scheme-light" src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.data.meta.title }}" width="112" height="28">
+      <img class="bd-scheme-dark" src="{{ site.url }}/images/bulma-logo-light.png" alt="{{ site.data.meta.title }}" width="112" height="28">
     </a>
 
     <a class="navbar-item is-hidden-desktop" href="{{ site.data.meta.github }}" target="_blank">
