--- a/docs/bulma-docs.sass
+++ b/docs/bulma-docs.sass
@@ -24,8 +24,10 @@ $main-spacing: 3rem
 $intro-width: 1080px
 $sidebar-width: 10.5rem
 
-// @import "./bulma-dark"
 @import "../bulma"
+// @import "../sass/utilities/_all.sass"
+@import "./bulma-cssvar.scss"
+// @import "./bulma-dark"
 
 %center
   align-items: center
@@ -33,7 +35,7 @@ $sidebar-width: 10.5rem
   justify-content: center
 
 %bd-box
-  background-color: $white
+  background-color: $scheme-main
   border-radius: $radius-large
   box-shadow: 0 1.5rem 1.5rem -1.25rem rgba($black, 0.05)
   display: block
